kubernetes/apps/ai/agentgateway/gateway/models/bge-reranker-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bge-reranker-v2-proxy
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 8080
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &model bge-reranker-v2
spec:
  parentRefs:
    - name: agentgateway-proxy
  rules:
    - matches:
        - headers:
            - type: Exact
              name: X-Gateway-Base-Model-Name
              value: *model
      backendRefs:
        - name: *model
          group: agentgateway.dev
          kind: AgentgatewayBackend
